# biblia-tui

./: .gitignore  LICENSE  LICENSE_DATA.md  README.md  biblia.py  install.sh  pyproject.toml
.github/workflows/: tests.yml
biblia_tui/: __init__.py  __main__.py  clipboard.py  data.py  exporter.py  models.py  references.py  storage.py  themes.py  tui.py
scripts/: biblia-launcher  download_data.py
tests/: helpers.py  test_clipboard_themes.py  test_data.py  test_exporter.py  test_references.py  test_storage.py  test_tui_navigation.py
